# tedusar_manipulation

./: .gitignore  LICENSE  README.md
tedusar_box_detection/: CMakeLists.txt  package.xml
tedusar_box_detection/include/tedusar_box_detection/: box_detection_node.h
tedusar_box_detection/launch/: box_detection.launch  utils.launch
tedusar_box_detection/src/: box_detection_node.cpp
tedusar_box_detection_msgs/: CMakeLists.txt  package.xml
tedusar_box_detection_msgs/action/: BoxDetection.action
tedusar_cartesian_arm_teleop/: CMakeLists.txt  package.xml
tedusar_cartesian_arm_teleop/config/: controller_default.yaml  controller_ps3.yaml
tedusar_cartesian_arm_teleop/include/tedusar_cartesian_arm_teleop/: cartesian_arm_teleop_node.h
tedusar_cartesian_arm_teleop/launch/: teleop_default.launch  teleop_ps3.launch
tedusar_cartesian_arm_teleop/src/: cartesian_arm_teleop_node.cpp
tedusar_cartesian_controller/: CMakeLists.txt  package.xml  ros_controller_plugins.xml
tedusar_cartesian_controller/include/tedusar_cartesian_controller/: cartesian_controller.hpp
tedusar_cartesian_controller/src/: cartesian_controller.cpp
tedusar_manipulation/: CMakeLists.txt  package.xml
