<?xml version="1.0"?>
<package>
  <name>tedusar_box_detection</name>
  <version>0.0.0</version>
  <description>The tedusar_box_detection package</description>

  <maintainer email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/tedusar_box_detection</url>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tedusar_box_detection_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tedusar_box_detection_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
