<?xml version="1.0"?>
<package>
  <name>tedusar_box_detection_msgs</name>
  <version>0.0.0</version>
  <description>Action definition for the tedusar_box_detection package.</description>

  <maintainer email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/tedusar_box_detection_msgs</url>

  <author email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
