<?xml version="1.0"?>
<package>
  <name>tedusar_cartesian_arm_teleop</name>
  <version>0.0.0</version>
  <description>The tedusar_cartesian_arm_teleop package</description>

  <maintainer email="alexannder.buchegger@student.tugraz.at">Alexander Buchegger</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/tedusar_cartesian_arm_teleop</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
