<?xml version="1.0"?>
<package>
  <name>tedusar_cartesian_controller</name>
  <version>0.0.0</version>
  <description>The tedusar_cartesian_controller package</description>
  <maintainer email="johannes.maurer@ist.tugraz.at">Johannes Maurer</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cartesian_arm_controller</url>

  <author email="johannes.maurer@ist.tugraz.at">Johannes Maurer</author>
  <author email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>


  <export>
       <controller_interface plugin="${prefix}/ros_controller_plugins.xml"/>
  </export>
</package>
